--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -32,23 +32,16 @@ legend {
 /* Individual element styles
    ------------------------- */
 
-label {
-    padding-bottom: 0.5rem;
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-}
-
 [type="text"],
 [type="email"],
 [type="password"],
+[type="number"],
 [type="search"],
 textarea {
     padding: 0.25rem 0.5rem;
     background: $white;
-    border: 1px solid $gray-light;
+    border: 1px solid transparent;
     width: 100%;
-    border-radius: $corner-radius;
 
     &:disabled {
         background: $gray-lighter;
