--- a/assets/styles/global/_grid.scss
+++ b/assets/styles/global/_grid.scss
@@ -3,14 +3,12 @@
 
 // Grid configuration
 $grid-width: 100%;
-$gutter: 2%;
+$gutter: 0;
 
 $row-spacing: 1rem;
 $corner-radius: 4px;
 
 @mixin row {
-    margin-bottom: $row-spacing;
-    padding: 0 $gutter / 2;
     display: flex;
     flex-flow: row;
     align-items: stretch;
@@ -35,8 +33,8 @@ $corner-radius: 4px;
 
 .g--container {
     margin: 0 auto;
-    width: 100%;
-    max-width: $grid-width;
+    width: 100vw;
+    height: 100vh;
 }
 
 .g--row {
